--- a/web/vite-project/package.json
+++ b/web/vite-project/package.json
@@ -12,7 +12,8 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@mdi/font": "^7.4.47",
     "vue": "^3.3.4",
-    "vuetify": "^3.6.0-beta.0.0"
+    "vuetify": "^3.6.0-beta.0.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
