--- a/web/vite-project/package.json
+++ b/web/vite-project/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@mdi/font": "^7.4.47",
     "vue": "^3.3.4",
+    "vue-router": "^4.3.2",
     "vuetify": "^3.6.0-beta.0.0",
     "vuex": "^4.1.0"
   },
